fix z-index do filtro

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,3 +174,6 @@ font-size:11px;
     background-color: #28a745;
 }
 
+#filter-form-interviews, #filter-form{
+    z-index: 51;
+}
